added basic members page+ db work

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static',filename='css/main.css' )}}">
     <title>evil limited</title>
 </head>
+
 <body>
-    <nav></nav>
+    <nav>
+        <div><a href="{{url_for('members')}}">members</a></div>
+        <div><a href="">acomplishments</a></div>
+        <div><a href="">uppcomming events</a></div>
+    </nav>
+    <div class="main">
+        <h1 class="title">title</h1>
+        <div class="content">
+            <h2 class="undertitle">undertitle</h2>
+            <div class="tekst">
+                <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nam molestiae assumenda in ea modi mollitia ut maiores, velit facere quas veritatis dolor impedit doloremque, praesentium aperiam. Voluptatem, tempore sed.</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
