--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,5 +5,13 @@ body{
 nav{
     background-color: cadetblue;
     width:100% ;
-    height: 200px;
+    height: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+nav div{
+    font-size: x-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
