--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <nav>
+        <div><a href="{{url_for('main')}}">main page</a></div>
         <div><a href="{{url_for('members')}}">members</a></div>
         <div><a href="">acomplishments</a></div>
-        <div><a href="">uppcomming events</a></div>
+        <div><a href="{{url_for('events')}}">uppcomming events</a></div>
     </nav>
     <div class="main">
         <h1 class="title">title</h1>
