added memebers js and am trying to fix script

--- a/templates/members.html
+++ b/templates/members.html
@@ -13,6 +13,7 @@
         <div><a href="">acomplishments</a></div>
         <div><a href="{{url_for('events')}}">uppcomming events</a></div>
     </nav>
-    
+    <div  id="data">{{data}}</div>
 </body>
+<script src="{{url_for('static',filename='js/members.js')}}"></script>
 </html>
